Fix h2 in content-body being too large

--- a/dissonant_website/static/css/article.css
+++ b/dissonant_website/static/css/article.css
@@ -31,7 +31,7 @@
   font-family: 'Roboto-Thin';
 }
 
-.article-header h2 {
+.card-content h2 {
   font-size: 2rem;
   text-align: center;
   padding-bottom: 0px;
